const lib name introduced

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_library(linkIt SHARED signal.cpp)
-target_include_directories(linkIt PUBLIC ${CMAKE_CURRENT_LIST_DIR}/include)
+add_library(linkit SHARED signal.cpp)
+target_include_directories(linkit PUBLIC ${CMAKE_CURRENT_LIST_DIR}/include)
