--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,9 @@
-add_library(linkit SHARED signal.cpp)
-target_include_directories(linkit PUBLIC ${CMAKE_CURRENT_LIST_DIR}/include)
+add_library(linkit 
+  SHARED 
+    signal.cpp
+)
+
+target_include_directories(linkit 
+  PUBLIC 
+    ${CMAKE_CURRENT_LIST_DIR}/include
+)
